docs: publish initial docs website

--- a/docs/stylesheet/main.scss
+++ b/docs/stylesheet/main.scss
@@ -1,17 +1,32 @@
 // Set your brand colors
 $purple: #8a4d76;
 $pink: #fa7c91;
-$brown: #757763;
-$beige-light: #d0d1cd;
-$beige-lighter: #eff0eb;
 
 // Path to Bulma's sass folder
 @use "bulma/sass" with (
-  $family-primary: '"Nunito", sans-serif',
-  $grey-dark: $brown,
-  $grey-light: $beige-light,
+  $family-primary: '"Fira Sans", sans-serif',
+  $family-code: '"Fira Mono", Inconsolata, Hack, SF Mono, Roboto Mono, Source Code Pro, Ubuntu Mono, monospace',
   $primary: $purple,
   $link: $pink,
-  $control-border-width: 2px,
-  $input-shadow: none
 );
+
+div.highlight {
+  background-color: transparent !important;
+
+  pre {
+    border-radius: .5em;
+  }
+}
+
+h2 {
+  a.headerlink {
+    display: none;
+  }
+
+  &:hover a.headerlink {
+    display: inline-block;
+  }
+}
+
+// Fira Sans and Fira Mono
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono&family=Fira+Sans:wght@200;300;400');
