deploy: adf5bba08fade1e54aa779d1cffa12a792b88029

--- a/css/main.css
+++ b/css/main.css
@@ -21575,4 +21575,8 @@ h2:hover a.headerlink {
   display: inline-block;
 }
 
+.content h2 {
+  word-wrap: break-word;
+}
+
 /*# sourceMappingURL=main.css.map */
